<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|bottom">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_above="@+id/password"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:id="@+id/login_button"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/password"
            android:layout_alignRight="@+id/password"
            android:onClick="loginButtonPressed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_login_label"
            android:id="@+id/textView"
            android:layout_alignTop="@+id/login"
            android:layout_toLeftOf="@+id/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_password_label"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/password"
            android:layout_toLeftOf="@+id/password" />
    </RelativeLayout>
</FrameLayout>